Changes for code analysis suggestions.